tests/baselines/reference/templateStringInCallExpressionES6.errors.txt
tests/cases/conformance/es6/templates/templateStringInCallExpressionES6.ts(1,1): error TS2349: Cannot invoke an expression whose type lacks a call signature. Type 'String' has no compatible call signatures.


==== tests/cases/conformance/es6/templates/templateStringInCallExpressionES6.ts (1 errors) ====
    `abc${0}abc`(`hello ${0} world`, `   `, `1${2}3`);
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2349: Cannot invoke an expression whose type lacks a call signature. Type 'String' has no compatible call signatures.